Checkstyle with {0} and UtilClass